name:                shape-server
version:             0.1.0.0
synopsis:            A server for rendering SVG shapes
description:         Please see README.org
homepage:            https://github.com/houli/shape-server#readme
license:             MIT
license-file:        LICENSE
author:              Eoin Houlihan
maintainer:          ehoulih@tcd.ie
copyright:           2016 Eoin Houlihan
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable shape-server
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base
                     , blaze-svg
                     , matrix
                     , scotty
  other-modules:       Colour
                     , Render
                     , Shapes
                     , StyleSheet
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/houli/shape-server
